data/clickhouse/overlays/production/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  labels:
    app: clickhouse
    tier: data
spec:
  type: ClusterIP
  externalIPs:
    - 93.115.27.125
  ports:
    - port: 9000
      name: tcp
    - port: 9009
      name: internal
    - port: 8123
      name: http
  selector:
    app: clickhouse
    tier: data
